2006-08-22  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-regression.[ch]: use gulong instead
	of u_long. Should fix bug #352221.

2006-08-22  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.h
	* libgimpbase/gimpreloc.h
	* libgimp/gimpdrawablepreview.h
	* libgimp/gimptile.h
	* libgimp/gimpunitcache.h
	* libgimpthumb/gimpthumb-utils.h
	* libgimpwidgets/gimpcolorarea.h
	* libgimpwidgets/gimphelpui.h: moved G_GNUC_INTERNAL before the
	return value (bug #352268).

	* tools/pdbgen/lib.pl : changed code generation rules to place
	G_GNUC_INTERNAL before the return value.

	* libgimp/*_pdb.h: regenerated.

2006-08-22  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprotatetool.c (gimp_rotate_tool_motion): fixed code
	that moves the angle between +/- pi (bug #352341).

2006-08-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpclonetool.c
	* app/tools/gimpforegroundselecttool.c: rewrite modifer_key
	functions more readably; no functional changes.
	
2006-08-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell-callbacks.c: allow modifier key events
	for Shift and Control to be propagated even if button1 is down.
	
	* app/tools/gimpclonetool.c
	* app/tools/gimpcroptool.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpmovetool.c
	* app/tools/gimppainttool.c
	* app/tools/gimpvectortool.c: change  modifier_key method
	to prevent any bad consequences.

	* app/tools/gimprectangletool.[ch]:  add modifier_key handler, and use it
	to toggle "make-square" if Shift is pressed while button1 is down, and
	"fixed-center" if Control is pressed while button1 is down.
	
	* app/tools/gimprectangleselecttool.c (gimp_rectangle_tool_modifier_key):
	call rectangle tool modifer_key method after chaining up.

2006-08-18  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppaletteselectbutton.c
	(gimp_palette_select_button_set_palette): check that the palette
	name actually refers to an existing palette and use the active