@@ -1,3 +1,9 @@
+2006-08-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
+	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion):
+	remove some constraining code that shouldn't have been there,
+	and simplify a bit.
+
 2006-08-22  Sven Neumann  <sven@gimp.org>
 
 	* app/composite/gimp-composite-regression.[ch]: use gulong instead
